fixed bugs from arrow left and arrow right, set correct caret position when text overflow in a line, can input something when you type words, but has a bug in it.

--- a/src/components/write/index.css
+++ b/src/components/write/index.css
@@ -2,6 +2,11 @@
   position: relative;
 }
 
+.write {
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
 .writing {
   position: absolute;
   left: 0;
@@ -44,7 +49,7 @@
 
 .get-length {
   display: inline-block;
-  font: 15px Consolas;
+  font: 15px consolas;
   white-space: pre;
   letter-spacing: 1px;
 }
